--- a/deepfriend/package.json
+++ b/deepfriend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "@types/cookies": "^0.9.0",
+    "@vercel/analytics": "^1.4.1",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-cookie": "^7.2.2",
