--- a/deepfriend/package.json
+++ b/deepfriend/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@types/cookies": "^0.9.0",
     "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-cookie": "^7.2.2",
